--- a/correctiv_eurosfueraerzte/locale/de/LC_MESSAGES/django.po
+++ b/correctiv_eurosfueraerzte/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-07-14 09:49+0200\n"
-"PO-Revision-Date: 2016-07-13 21:44+0100\n"
+"PO-Revision-Date: 2016-08-08 15:22+0200\n"
 "Last-Translator: Stefan Wehrmeyer <stefan.wehrmeyer@okfn.org>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.7.5\n"
+"X-Generator: Poedit 1.8.7\n"
 
 #: admin.py:24
 msgid "Successfully replaced objects."
@@ -275,8 +275,8 @@ msgstr "Finde Deinen Arzt"
 msgid ""
 "How much money has your doctor received from the pharma industry last year?"
 msgstr ""
-"Wieviel Geld hat Dein Arzt im vergangenen Jahr von der Pharmaindustrie "
-"erhalten?"
+"Wieviel Geld hat Dein Arzt/Heilberufler im vergangenen Jahr von der "
+"Pharmaindustrie erhalten?"
 
 #: templates/correctiv_eurosfueraerzte/_recipient_search.html:26
 msgid "Examples:"
@@ -649,8 +649,9 @@ msgid ""
 "        "
 msgstr ""
 "\n"
-"\tNur 30 Prozent aller Ärzte haben einer Veröffentlichung ihrer Daten "
-"zugestimmt. Du kannst auch nach Postleitzahlen und Orten suchen.\n"
+"\tNur 30 Prozent aller Ärzte und Fachkreisangehörigen haben einer "
+"Veröffentlichung ihrer Daten zugestimmt. Du kannst auch nach Postleitzahlen "
+"und Orten suchen.\n"
 "\t"
 
 #: templates/correctiv_eurosfueraerzte/paymentrecipient_list.html:61
