--- a/correctiv_eurosfueraerzte/locale/de/LC_MESSAGES/django.po
+++ b/correctiv_eurosfueraerzte/locale/de/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-08-17 16:38+0200\n"
-"PO-Revision-Date: 2016-08-17 16:38+0100\n"
+"POT-Creation-Date: 2016-08-18 10:14+0200\n"
+"PO-Revision-Date: 2016-08-18 10:16+0100\n"
 "Last-Translator: Stefan Wehrmeyer <stefan.wehrmeyer@okfn.org>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -385,16 +385,70 @@ msgstr ""
 "          Suche nach %(kind)s in %(country)s\n"
 "        "
 
-#: templates/correctiv_eurosfueraerzte/ch/_about_blurb.html:3
-msgid "Switzerland gets money"
+#: templates/correctiv_eurosfueraerzte/ch/_about_blurb.html:4
+#: templates/correctiv_eurosfueraerzte/ch/_index_blurb.html:3
+msgid ""
+"59 pharma companies in Switzerland published their payments to doctors and "
+"other health care professionals and organisations from the last year."
 msgstr ""
+"59 Pharma-Unternehmen in der Schweiz veröffentlichen im Jahr 2016 erstmals "
+"alle Geldzahlungen, die sie im vergangenen Jahr an Ärzte, Fachleute  und "
+"Spitäler geleistet haben."
+
+#: templates/correctiv_eurosfueraerzte/ch/_about_blurb.html:7
+#: templates/correctiv_eurosfueraerzte/de/_about_blurb.html:7
+msgid "Read the article"
+msgstr "Zum Hintergrundartikel"
 
 #: templates/correctiv_eurosfueraerzte/ch/_article_link.html:2
 #: templates/correctiv_eurosfueraerzte/de/_article_link.html:2
 msgid "Read article"
 msgstr "Zum Hintergrundartikel"
 
-#: templates/correctiv_eurosfueraerzte/ch/_index_blurb.html:3
+#: templates/correctiv_eurosfueraerzte/ch/_index_blurb.html:4
+#: templates/correctiv_eurosfueraerzte/de/_index_blurb.html:4
+msgid "Read the background article"
+msgstr "Zum Hintergrundartikel"
+
+#: templates/correctiv_eurosfueraerzte/ch/_recipient_main.html:3
+msgctxt "CH"
+msgid ""
+"Only around 30 percent of doctors and health care professionals agreed to "
+"the publication of their fees and conference and travel expenses."
+msgstr ""
+"Nur knapp 30 Prozent der Ärzte und Fachleute haben den Firmen ihr "
+"Einverständnis gegeben, dass ihre Vortrags- und Beratungshonorare, "
+"Tagungsgebühren und Reisespesen/Übernachtungskosten veröffentlicht werden "
+"dürfen."
+
+#: templates/correctiv_eurosfueraerzte/ch/_recipient_main.html:6
+msgctxt "CH"
+msgid ""
+"Detailed payments to doctors related to studies and non-interventional "
+"studies are not published by the pharma companies."
+msgstr ""
+"Die Zahlungen an Ärzte und Organisationen für Forschung und Entwicklung "
+"wollen die Pharmaunternehmen grundsätzlich nicht personenbezogen "
+"veröffentlichen."
+
+#: templates/correctiv_eurosfueraerzte/ch/_recipient_sidebar.html:3
+msgid ""
+"The information on this page come from the 59 pharma companies that signed "
+"the Pharma Cooperation Codex. This codex determine that the companies have "
+"to publish their payments on their websites."
+msgstr ""
+"Die Informationen auf dieser Seite stammen von den 59 Pharmaunternehmen, die "
+"den Pharma-Kooperations-Kodex (PKK) unterzeichnet haben. Dieses Reglement "
+"verpflichtet die Firmen dazu, ihre Angaben auf ihren Unternehmenswebseiten "
+"zu veröffentlichen."
+
+#: templates/correctiv_eurosfueraerzte/ch/_search_examples.html:4
+#: templates/correctiv_eurosfueraerzte/ch/_search_examples.html:6
+#: templates/correctiv_eurosfueraerzte/de/_search_examples.html:4
+#: templates/correctiv_eurosfueraerzte/de/_search_examples.html:6
+msgid "or"
+msgstr "oder"
+
 #: templates/correctiv_eurosfueraerzte/de/_about_blurb.html:4
 #: templates/correctiv_eurosfueraerzte/de/_index_blurb.html:3
 msgid ""
@@ -406,52 +460,8 @@ msgstr ""
 "2016 erstmals alle Geldzahlungen, die sie im vergangenen Jahr an Ärzte, "
 "Fachkreisangehörige und Kliniken geleistet haben."
 
-#: templates/correctiv_eurosfueraerzte/ch/_index_blurb.html:4
-#: templates/correctiv_eurosfueraerzte/de/_index_blurb.html:4
-msgid "Read the background article"
-msgstr "Zum Hintergrundartikel"
-
-#: templates/correctiv_eurosfueraerzte/ch/_recipient_main.html:3
-#, fuzzy
-#| msgid ""
-#| "Nur knapp 30 Prozent der Ärzte haben den Firmen ihr Einverständnis "
-#| "gegeben, dass ihre Vortrags- und Beratungshonorare, Tagungsgebühren und "
-#| "Reisespesen veröffentlicht werden dürfen."
-msgid ""
-"Nur knapp XY Prozent der Ärzte und Fachkreisangehörigen haben den Firmen ihr "
-"Einverständnis gegeben, dass ihre Vortrags- und Beratungshonorare, "
-"Tagungsgebühren und Reisespesen veröffentlicht werden dürfen."
-msgstr ""
-"Nur knapp 30 Prozent der Ärzte haben den Firmen ihr Einverständnis gegeben, "
-"dass ihre Vortrags- und Beratungshonorare, Tagungsgebühren und Reisespesen "
-"veröffentlicht werden dürfen."
-
-#: templates/correctiv_eurosfueraerzte/ch/_recipient_main.html:6
-msgid ""
-"Die Zahlungen an Ärzte für Studien und Anwendungsbeobachtungen wollen die "
-"Pharmafirmen grundsätzlich nicht personenbezogen veröffentlichen."
-msgstr ""
-"Die Zahlungen an Ärzte für Studien und Anwendungsbeobachtungen wollen die "
-"Pharmafirmen grundsätzlich nicht personenbezogen veröffentlichen."
-
-#: templates/correctiv_eurosfueraerzte/ch/_recipient_sidebar.html:3
-msgid ""
-"The information on this page come from the XY member companies of "
-"Switzerland who published these payments on their websites."
-msgstr ""
-
-#: templates/correctiv_eurosfueraerzte/ch/_search_examples.html:4
-#: templates/correctiv_eurosfueraerzte/ch/_search_examples.html:6
-#: templates/correctiv_eurosfueraerzte/de/_search_examples.html:4
-#: templates/correctiv_eurosfueraerzte/de/_search_examples.html:6
-msgid "or"
-msgstr "oder"
-
-#: templates/correctiv_eurosfueraerzte/de/_about_blurb.html:7
-msgid "Read the article"
-msgstr "Zum Hintergrundartikel"
-
 #: templates/correctiv_eurosfueraerzte/de/_recipient_main.html:3
+msgctxt "DE"
 msgid ""
 "Only around 30 percent of doctors and health care professionals agreed to "
 "the publication of their fees and conference and travel expenses."
@@ -461,6 +471,7 @@ msgstr ""
 "Tagungsgebühren und Reisespesen veröffentlicht werden dürfen."
 
 #: templates/correctiv_eurosfueraerzte/de/_recipient_main.html:6
+msgctxt "DE"
 msgid ""
 "Detailed payments to doctors related to studies and non-interventional "
 "studies are not published by the pharma companies."
@@ -941,6 +952,27 @@ msgid ""
 msgstr ""
 "Details darüber, wieviel Geld %(name)s an Ärzte und für "
 "Anwendungsbeobachtungen zahlt."
+
+#, fuzzy
+#~| msgid ""
+#~| "Nur knapp 30 Prozent der Ärzte haben den Firmen ihr Einverständnis "
+#~| "gegeben, dass ihre Vortrags- und Beratungshonorare, Tagungsgebühren und "
+#~| "Reisespesen veröffentlicht werden dürfen."
+#~ msgid ""
+#~ "Nur knapp XY Prozent der Ärzte und Fachkreisangehörigen haben den Firmen "
+#~ "ihr Einverständnis gegeben, dass ihre Vortrags- und Beratungshonorare, "
+#~ "Tagungsgebühren und Reisespesen veröffentlicht werden dürfen."
+#~ msgstr ""
+#~ "Nur knapp 30 Prozent der Ärzte haben den Firmen ihr Einverständnis "
+#~ "gegeben, dass ihre Vortrags- und Beratungshonorare, Tagungsgebühren und "
+#~ "Reisespesen veröffentlicht werden dürfen."
+
+#~ msgid ""
+#~ "Die Zahlungen an Ärzte für Studien und Anwendungsbeobachtungen wollen die "
+#~ "Pharmafirmen grundsätzlich nicht personenbezogen veröffentlichen."
+#~ msgstr ""
+#~ "Die Zahlungen an Ärzte für Studien und Anwendungsbeobachtungen wollen die "
+#~ "Pharmafirmen grundsätzlich nicht personenbezogen veröffentlichen."
 
 #, fuzzy
 #~| msgid ""
