change english wording, add statistics

--- a/correctiv_eurosfueraerzte/locale/de/LC_MESSAGES/django.po
+++ b/correctiv_eurosfueraerzte/locale/de/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-11-27 20:11+0100\n"
+"POT-Creation-Date: 2016-11-28 17:31+0100\n"
 "PO-Revision-Date: 2016-08-23 10:35+0100\n"
 "Last-Translator: Stefan Wehrmeyer <stefan.wehrmeyer@okfn.org>\n"
 "Language-Team: \n"
@@ -352,11 +352,11 @@ msgstr "Ersetze ausgewählte Objekte mit diesem Objekt"
 #| "from the last year."
 msgctxt "AT"
 msgid ""
-"In 2016 the 54 biggest pharma companies in Germany published their payments "
-"to doctors and other health care professionals and organisations from the "
-"last year."
+"In 2016, pharma companies in Austria published information about their "
+"payments to doctors and other health care professionals and organisations "
+"from the last year."
 msgstr ""
-"Pharma-Unternehmen in Österreich veröffentlichen im Jahr 2016 erstmals alle "
+"Pharma-Unternehmen in Österreich veröffentlichen im Jahr 2016 erstmals "
 "Geldzahlungen, die sie im vergangenen Jahr an Ärzte, Fachkreisangehörige und "
 "Kliniken geleistet haben."
 
@@ -379,27 +379,21 @@ msgid "Read the background article"
 msgstr "Zum Hintergrundartikel"
 
 #: templates/correctiv_eurosfueraerzte/at/_recipient_main.html:3
-#, fuzzy
-#| msgctxt "CH"
-#| msgid ""
-#| "Only around 30 percent of doctors and health care professionals agreed to "
-#| "the publication of their fees and conference and travel expenses."
 msgctxt "AT"
 msgid ""
-"Only around 30 percent of doctors and health care professionals agreed to "
-"the publication of their fees and conference and travel expenses."
+"Only around 18 percent of the amount paid to doctors and health care "
+"professionals for fees and conference and travel expenses was published on "
+"an individual basis. The remaining amount was only published as an aggregate "
+"sum. For organizations, 57 percent of the total amount was attributed to "
+"individual organizations."
 msgstr ""
-"Nur knapp 30 Prozent der Ärzte und Fachleute haben den Firmen ihr "
-"Einverständnis gegeben, dass ihre Vortrags- und Beratungshonorare, "
-"Tagungsgebühren und Reisespesen/Übernachtungskosten veröffentlicht werden "
-"dürfen."
+"Nur rund 18 Prozent der Summe, die Ärzte und Fachleute für Tagungsgebühren "
+"und Reisespesen/Übernachtungskosten erhalten haben, kann einzelnen Ärzten "
+"zugeordnet werden. Der Rest wurde nur als Gesamtsumme veröffentlicht. Bei "
+"den Organisationen sind immerhin die Empfänger von 57 Prozent des "
+"Gesamtvolumens nachvollziehbar."
 
 #: templates/correctiv_eurosfueraerzte/at/_recipient_main.html:6
-#, fuzzy
-#| msgctxt "CH"
-#| msgid ""
-#| "Detailed payments to doctors related to studies and non-interventional "
-#| "studies are not published by the pharma companies."
 msgctxt "AT"
 msgid ""
 "Detailed payments to doctors related to studies and non-interventional "
@@ -410,20 +404,13 @@ msgstr ""
 "veröffentlichen."
 
 #: templates/correctiv_eurosfueraerzte/at/_recipient_sidebar.html:3
-#, fuzzy
-#| msgid ""
-#| "The information on this page come from the 54 member companies of "
-#| "“Voluntary Self-Regulation of the pharmaceutical industry” (“Freiwilligen "
-#| "Selbstkontrolle für die Arzneimittelindustrie e.V.”) who published these "
-#| "payments on their websites."
 msgctxt "AT"
 msgid ""
-"The information on this page come from the 54 member companies of “Voluntary "
-"Self-Regulation of the pharmaceutical industry” (“Freiwilligen "
-"Selbstkontrolle für die Arzneimittelindustrie e.V.”) who published these "
+"The information on this page come from member companies of the “Association "
+"of the pharmaceutical industry in Austria” (“PHARMIG”) who published these "
 "payments on their websites."
 msgstr ""
-"Die Informationen auf dieser Seite stammen von Mitgliedsfirmen der „Verband "
+"Die Informationen auf dieser Seite stammen von Mitgliedsfirmen des „Verband "
 "der pharmazeutischen Industrie Österreichs“ (PHARMIG), die diese Angaben auf "
 "ihren jeweiligen Webseiten veröffentlicht haben."
 
