--- a/correctiv_eurosfueraerzte/locale/de/LC_MESSAGES/django.po
+++ b/correctiv_eurosfueraerzte/locale/de/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-02-20 18:26+0100\n"
-"PO-Revision-Date: 2017-02-20 18:27+0100\n"
+"POT-Creation-Date: 2017-03-19 23:39-0400\n"
+"PO-Revision-Date: 2017-03-19 23:52-0500\n"
 "Last-Translator: Stefan Wehrmeyer <stefan.wehrmeyer@okfn.org>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -18,13 +18,18 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 1.7.5\n"
 
-#: admin.py:24
+#: admin/base.py:23
 msgid "Successfully replaced objects."
 msgstr "Erfolgreich Objekte ersetzt."
 
-#: admin.py:39
+#: admin/base.py:38
 msgid "Replace selected with..."
 msgstr "Ersetze Objekte mit..."
+
+#: admin/zerodocs.py:44
+#: templates/correctiv_eurosfueraerzte/_recipient_list_table.html:9
+msgid "Address"
+msgstr "Adresse"
 
 #: apps.py:7
 msgctxt "stand-alone"
@@ -56,10 +61,10 @@ msgctxt "in @country"
 msgid "Switzerland"
 msgstr "der Schweiz"
 
-#: apps.py:23 cms_apps.py:7 cms_plugins.py:11
+#: apps.py:25 cms_apps.py:7 cms_plugins.py:11
 #: templates/correctiv_eurosfueraerzte/_drug_search.html:8
-#: templates/correctiv_eurosfueraerzte/plugins/search_tile.html:7 views.py:36
-#: views.py:38
+#: templates/correctiv_eurosfueraerzte/plugins/search_tile.html:7
+#: views/base.py:36 views/base.py:38
 msgid "Euros for Doctors"
 msgstr "Euros für Ärzte"
 
@@ -67,7 +72,7 @@ msgstr "Euros für Ärzte"
 msgid "Search Tile"
 msgstr "Such-Kachel"
 
-#: forms.py:30 forms.py:67
+#: forms/base.py:30 forms/base.py:67
 #: templates/correctiv_eurosfueraerzte/_drug_search.html:22
 #: templates/correctiv_eurosfueraerzte/_recipient_search.html:26
 #: templates/correctiv_eurosfueraerzte/base_recipients.html:40
@@ -76,152 +81,265 @@ msgstr "Such-Kachel"
 msgid "Search"
 msgstr "Suche"
 
-#: forms.py:35
+#: forms/base.py:35
 msgid "Name of drug"
 msgstr "Name des Medikaments"
 
-#: forms.py:72
+#: forms/base.py:72
 msgid "Name, city or postcode"
 msgstr "Name, Ort oder PLZ"
 
-#: forms.py:77
+#: forms/base.py:77
 msgid "People and organisations"
 msgstr "Personen und Organisationen"
 
-#: forms.py:78
+#: forms/base.py:78
 msgid "Only people"
 msgstr "Nur Personen"
 
-#: forms.py:79
+#: forms/base.py:79
 msgid "Only organisations"
 msgstr "Nur Organisationen"
 
-#: forms.py:92
+#: forms/base.py:92
 msgid "all available countries"
 msgstr "allen verfügbaren Ländern"
 
-#: models.py:195 templates/correctiv_eurosfueraerzte/drug_detail.html:28
+#: forms/zerodocs.py:28
+msgid "I agree to the publication of theinformation I give"
+msgstr "Ich stimme der Veröffentlichung meiner Angaben zu."
+
+#: forms/zerodocs.py:35
+msgid "We will send you an email to confirm your address."
+msgstr "Wir werden Ihnen eine E-Mail senden, um Ihre Adresse zu bestätigen."
+
+#: forms/zerodocs.py:51
+msgid "Create or change your entry"
+msgstr "Erstellen oder bearbeiten Sie Ihren Eintrag"
+
+#: forms/zerodocs.py:62
+msgid ""
+"Last login has been less than 12 hours ago. Please use the link in the email "
+"we sent you."
+msgstr ""
+"Ihr letzter Login ist weniger als 12 Stunden her. Bitte nutzen Sie den Link "
+"aus der E-Mail, die wir Ihnen gesendet hatten."
+
+#: forms/zerodocs.py:80 models/zerodocs.py:36
+msgid "address"
+msgstr "Adresse"
+
+#: forms/zerodocs.py:81
+msgid "Please give your business address"
+msgstr "Bitte geben Sie Ihre berufliche Adresse an"
+
+#: forms/zerodocs.py:82 models/zerodocs.py:37
+msgid "postcode"
+msgstr "PLZ"
+
+#: forms/zerodocs.py:83 models/zerodocs.py:38
+msgid "location"
+msgstr "Ort"
+
+#: forms/zerodocs.py:84 models/zerodocs.py:39
+msgid "country"
+msgstr "Land"
+
+#: forms/zerodocs.py:88
+msgid "Please check all years that apply:"
+msgstr "Bitte haken Sie alle zutreffenden Jahre an:"
+
+#: forms/zerodocs.py:103
+#, python-format
+msgid "In %d I have not received any money from pharmaceutical companies"
+msgstr ""
+"Im Jahr %d habe ich kein Geld oder geldwerte Leistungen von Pharmafirmen "
+"erhalten"
+
+#: forms/zerodocs.py:117
+msgid "Your details"
+msgstr "Ihre Details"
+
+#: forms/zerodocs.py:122
+msgid "You have not received money from the pharma industry in these years"
+msgstr ""
+"Sie haben kein Geld oder geldwerte Leistungen in diesen Jahren von der "
+"Pharmaindustrie erhalten"
+
+#: forms/zerodocs.py:126
+msgid "Submit"
+msgstr "Abschicken"
+
+#: models/base.py:195 templates/correctiv_eurosfueraerzte/drug_detail.html:28
 msgid "Pharma Company"
 msgstr "Pharmaunternehmen"
 
-#: models.py:196
+#: models/base.py:196
 msgid "Pharma Companies"
 msgstr "Pharmaunternehmen"
 
-#: models.py:276
+#: models/base.py:276
 msgid "active ingredient"
 msgstr "Wirkstoff"
 
-#: models.py:278
+#: models/base.py:278
 msgid "medical indication"
 msgstr "Indikation"
 
-#: models.py:284
+#: models/base.py:284
 msgid "pharma company"
 msgstr "Pharmaunternehmen"
 
-#: models.py:294 models.py:295
+#: models/base.py:294 models/base.py:295
 msgid "Drugs"
 msgstr "Medikamente"
 
-#: models.py:338
+#: models/base.py:338
 msgid "drugs"
 msgstr "Medikamente"
 
-#: models.py:349
+#: models/base.py:349
 msgid "executing company"
 msgstr "Ausführende Firma"
 
-#: models.py:351
+#: models/base.py:351
 msgid "sponsor"
 msgstr "Auftraggeber"
 
-#: models.py:365
+#: models/base.py:365
 msgid "observational study"
 msgstr "Anwendungsbeobachtung"
 
-#: models.py:366
+#: models/base.py:366
 msgid "observational studies"
 msgstr "Anwendungsbeobachtungen"
 
-#: models.py:496 models.py:656
+#: models/base.py:496 models/base.py:656
 msgid "Doctors (HCP)"
 msgstr "Ärzte (HCP)"
 
-#: models.py:497 models.py:657
+#: models/base.py:497 models/base.py:657
 msgid "Organisation (HCO)"
 msgstr "Organisation (HCO)"
 
-#: models.py:508
+#: models/base.py:508
 msgid "Geographic location"
 msgstr "Geographischer Standort"
 
-#: models.py:533
+#: models/base.py:533
 msgid "payment recipient"
 msgstr "Zahlungsempfänger"
 
-#: models.py:534
+#: models/base.py:534
 msgid "payment recipients"
 msgstr "Zahlungsempfänger"
 
-#: models.py:572
+#: models/base.py:572
 #: templates/correctiv_eurosfueraerzte/_recipient_list_table.html:8
 #: templates/correctiv_eurosfueraerzte/drug_list.html:17
 #: templates/correctiv_eurosfueraerzte/pharmacompany_detail.html:125
 msgid "Name"
 msgstr "Name"
 
-#: models.py:593
+#: models/base.py:593
 msgid "medical doctor"
 msgstr "Arzt"
 
-#: models.py:594
+#: models/base.py:594
 msgid "medical doctors"
 msgstr "Ärzte"
 
-#: models.py:611
+#: models/base.py:611
 msgid "healthcare organisation"
 msgstr "Organisation im Gesundheitswesen"
 
-#: models.py:612
+#: models/base.py:612
 msgid "healthcare organisations"
 msgstr "Fachpersonal im Gesundheitswesen"
 
-#: models.py:627
+#: models/base.py:627
 msgid "fees"
 msgstr "Honorare"
 
-#: models.py:628
+#: models/base.py:628
 msgid "related expenses"
 msgstr "Spesen"
 
-#: models.py:630
+#: models/base.py:630
 msgid "registration fees"
 msgstr "Tagungsgebühren"
 
-#: models.py:631
+#: models/base.py:631
 msgid "travel & accommodation"
 msgstr "Reisekosten"
 
-#: models.py:633
+#: models/base.py:633
 msgid "donations and grants"
 msgstr "Spenden & Fördergelder"
 
-#: models.py:634
+#: models/base.py:634
 msgid "sponsorship"
 msgstr "Sponsoring"
 
-#: models.py:636
+#: models/base.py:636
 msgid "Research & development"
 msgstr "Forschung & Entwicklung"
 
-#: models.py:665
+#: models/base.py:665
 msgid "pharma payment"
 msgstr "Zahlung der Pharmaindustrie"
 
-#: models.py:666
+#: models/base.py:666
 msgid "pharma payments"
 msgstr "Zahlungen der Pharmaindustrie"
+
+#: models/zerodocs.py:16
+msgid "Ms."
+msgstr "Frau"
+
+#: models/zerodocs.py:17
+msgid "Mr."
+msgstr "Herr"
+
+#: models/zerodocs.py:23
+msgid "Mr/Ms"
+msgstr "Anrede"
+
+#: models/zerodocs.py:24
+msgid "title"
+msgstr "Titel"
+
+#: models/zerodocs.py:26
+msgid "first name"
+msgstr "Vorname"
+
+#: models/zerodocs.py:27
+msgid "last name"
+msgstr "Nachname"
+
+#: models/zerodocs.py:29
+msgid "email address"
+msgstr "E-Mail-Adresse"
+
+#: models/zerodocs.py:43
+msgid "Zero Doctor"
+msgstr "Null-Euro-Arzt"
+
+#: models/zerodocs.py:44 models/zerodocs.py:105
+msgid "Zero Doctors"
+msgstr "Null-Euro-Ärzte"
+
+#: models/zerodocs.py:83
+msgid "Your Zero Euro Doctor Link"
+msgstr "Ihr Null-Euro-Arzt-Link"
+
+#: models/zerodocs.py:104
+msgid "Zero Doctor Submission"
+msgstr "Null-Euro-Angabe"
+
+#: templates/admin/correctiv_eurosfueraerzte/zerodoctor/change_form.html:15
+msgid "Confirm"
+msgstr "Bestätigen"
 
 #: templates/correctiv_eurosfueraerzte/_company_payment_barchart.html:18
 #, python-format
@@ -298,10 +416,6 @@ msgstr "Finde Dein Medikament"
 #: templates/correctiv_eurosfueraerzte/_drug_search.html:16
 msgid "Find out what drugs are pushed by the pharma industry."
 msgstr "Finde heraus, für welche Medikamente es Anwendungsbeobachtungen gibt."
-
-#: templates/correctiv_eurosfueraerzte/_recipient_list_table.html:9
-msgid "Address"
-msgstr "Adresse"
 
 #: templates/correctiv_eurosfueraerzte/_recipient_list_table.html:10
 msgid "Total amount"
@@ -1018,81 +1132,236 @@ msgstr "PLZ"
 msgid "Example:"
 msgstr "Beispiel:"
 
-#: urls.py:20
+#: templates/correctiv_eurosfueraerzte/zerodocs/email_link.txt:1
+#, python-format
+msgid ""
+"Dear %(gender_title)s %(last_name)s\n"
+"\n"
+"Thank you for becoming a 0-Euro Doctor on correctiv.org.\n"
+"\n"
+"Please continue your submission by clicking this link:\n"
+"\n"
+"%(url)s\n"
+"\n"
+"Thanks\n"
+"\n"
+"The team of CORRECTIV\n"
+"\n"
+msgstr ""
+"Sehr geehrte/r %(gender_title)s %(last_name)s\n"
+"\n"
+"vielen Dank, dass Sie Null-Euro-Arzt auf correctiv.org werden wollen.\n"
+"\n"
+"Bitte fahren Sie fort, indem Sie diesen Link anklicken und dort das Formular "
+"ausfüllen:\n"
+"\n"
+"%(url)s\n"
+"\n"
+"Vielen Dank und viele Grüße\n"
+"\n"
+"Das Team von CORRECTIV\n"
+"\n"
+
+#: templates/correctiv_eurosfueraerzte/zerodocs/email_sent.html:6
+#: templates/correctiv_eurosfueraerzte/zerodocs/index.html:8
+msgid "Zero Euro Doctors"
+msgstr "Null-Euro-Ärzte"
+
+#: templates/correctiv_eurosfueraerzte/zerodocs/email_sent.html:8
+msgid "You will receive an email from us with a link that you need to click."
+msgstr ""
+"Sie werden von uns eine E-Mail mit einem Link erhalten, den Sie anklicken "
+"müssen."
+
+#: templates/correctiv_eurosfueraerzte/zerodocs/form.html:9
+#, python-format
+msgid ""
+"\n"
+"    Zero Euro Profile of %(full_name)s\n"
+"  "
+msgstr ""
+"\n"
+"    Null-Euro-Profil von %(full_name)s\n"
+"  "
+
+#: templates/correctiv_eurosfueraerzte/zerodocs/form.html:17
+msgid "Please fill out the form below to enter your details."
+msgstr "Bitte füllen Sie das Formular weiter unten mit Ihren Angaben aus."
+
+#: templates/correctiv_eurosfueraerzte/zerodocs/form.html:21
+msgid "We have received the following submissions from you."
+msgstr "Wir haben folgende Angaben von Ihnen erhalten."
+
+#: templates/correctiv_eurosfueraerzte/zerodocs/form.html:28
+msgid "confirmed"
+msgstr "bestätigt"
+
+#: templates/correctiv_eurosfueraerzte/zerodocs/form.html:30
+msgid "unconfirmed"
+msgstr "unbestätigt"
+
+#: templates/correctiv_eurosfueraerzte/zerodocs/form.html:37
+msgid "You have unconfirmed submissions, please use these options to confirm:"
+msgstr ""
+"Sie haben unbestätigte Angaben. Bitte tun Sie folgendes, um uns Ihre Angaben "
+"zu bestätigen."
+
+#: templates/correctiv_eurosfueraerzte/zerodocs/form.html:40
+msgid ""
+"Download the following form letter, sign it, stamp it and send it to us via "
+"post or fax (address details are on the letter)."
+msgstr ""
+"Laden Sie den folgenden Brief herunter, unterschreiben Sie ihn, stempeln Sie "
+"ihn ab und schicken Sie ihn uns per Post oder Fax (die Adresse finden Sie "
+"auf dem Brief)."
+
+#: templates/correctiv_eurosfueraerzte/zerodocs/form.html:44
+msgid "Download letter"
+msgstr "Brief herunterladen"
+
+#: templates/correctiv_eurosfueraerzte/zerodocs/form.html:49
+msgid "You can adjust your details with the form below."
+msgstr "Sie können Ihre Angaben mit dem Formular weiter unten anpassen."
+
+#: templates/correctiv_eurosfueraerzte/zerodocs/index.html:13
+msgid ""
+"You want to publicly show that you are not taking any money from the pharma "
+"industry?"
+msgstr ""
+"Sie wollen öffentlich zeigen, dass Sie kein Geld von der Pharmaindustrie "
+"erhalten?"
+
+#: templates/correctiv_eurosfueraerzte/zerodocs/index.html:17
+msgid ""
+"\n"
+"        When users search for your name in our database, we can show them, "
+"that you are refusing to take money from pharma companies.\n"
+"      "
+msgstr ""
+"\n"
+"        Wenn Nutzer in unserer Datenbank nach Ihrem Namen suchen, können wir "
+"anzeigen, dass Sie kein Geld von Pharmafirmen annehmen.\n"
+"      "
+
+#: templates/correctiv_eurosfueraerzte/zerodocs/index.html:23
+msgid ""
+"\n"
+"        Please fill out the form below to get started.\n"
+"      "
+msgstr ""
+"\n"
+"        Bitte füllen Sie das untenstehende Formular aus.\n"
+"      "
+
+#: urls/__init__.py:26
 msgid "^recipient/(?P<slug>[\\w-]+)/$"
 msgstr "^empfaenger/(?P<slug>[\\w-]+)/$"
 
-#: urls.py:22
+#: urls/__init__.py:28
 msgid "^company/(?P<slug>[\\w-]+)/$"
 msgstr "^unternehmen/(?P<slug>[\\w-]+)/$"
 
-#: urls.py:26
+#: urls/__init__.py:32
 msgid "^recipient-search/$"
 msgstr "^empfaenger-suche/$"
 
-#: urls.py:29
+#: urls/__init__.py:35
 msgid "^search/$"
 msgstr "^suche/$"
 
-#: urls.py:30
+#: urls/__init__.py:36
 msgid "^search/json/$"
 msgstr "^suche/json/$"
 
-#: urls.py:33
+#: urls/__init__.py:39
 msgid "^drug/(?P<slug>[\\w-]+)/$"
 msgstr "^medikament/(?P<slug>[\\w-]+)/$"
 
-#: urls.py:36
+#: urls/__init__.py:42
 msgid "^study/(?P<slug>[\\w-]+)/$"
 msgstr "^awb/(?P<slug>[\\w-]+)/$"
 
-#: views.py:37
+#. Translators: url slug
+#: urls/zerodocs.py:13
+msgid "email-sent"
+msgstr "email-versendet"
+
+#. Translators: url slug
+#: urls/zerodocs.py:17 urls/zerodocs.py:19
+msgid "entry"
+msgstr "angaben"
+
+#. Translators: url slug
+#: urls/zerodocs.py:25
+msgid "zero-euro"
+msgstr "null-euro"
+
+#: views/base.py:37
 msgid "Money for Doctors"
 msgstr "Geld für Ärzte"
 
-#: views.py:168
+#: views/base.py:168
 #, python-format
 msgid "%(name)s and money from the pharma industry"
 msgstr "%(name)s und Geld von der Pharmaindustrie."
 
-#: views.py:169
+#: views/base.py:169
 #, python-format
 msgid "Details on how much money %(name)s got from pharma companies."
 msgstr "Details wieviel Geld %(name)s von der Pharmaindustrie bekommen hat."
 
-#: views.py:184
+#: views/base.py:184
 #, python-format
 msgid "Drug %(name)s"
 msgstr "Medikament %(name)s"
 
-#: views.py:185
+#: views/base.py:185
 #, python-format
 msgid "Details on how much money doctors got to prescribe %(name)s."
 msgstr ""
 "Details wieviel Geld Ärzte bekommen haben, um %(name)s zu verschreiben."
 
-#: views.py:204
+#: views/base.py:204
 #, python-format
 msgid "Observational Study  %(title)s"
 msgstr "Anwendungsbeobachtung %(title)s"
 
-#: views.py:207
+#: views/base.py:207
 #, python-format
 msgid "Details on the observational study %(title)s."
 msgstr "Details über die Anwendungsbeobachtung %(title)s."
 
-#: views.py:224
+#: views/base.py:224
 #, python-format
 msgid "Pharma company  %(name)s"
 msgstr "Pharmaunternehmen %(name)s"
 
-#: views.py:227
+#: views/base.py:227
 #, python-format
 msgid ""
 "Details on how money from %(name)s goes to doctors and observational studies."
 msgstr ""
 "Details darüber, wieviel Geld %(name)s an Ärzte und für "
 "Anwendungsbeobachtungen zahlt."
+
+#: views/zerodocs.py:41
+msgid "Please check your email!"
+msgstr "Bitte schauen Sie in Ihren E-Mail-Posteingang!"
+
+#: views/zerodocs.py:45
+msgid "Email could not be sent, please check if it is correct!"
+msgstr ""
+"E-Mail konnte nicht versendet werden, bitte überprüfen Sie Ihre E-Mail-"
+"Adresse!"
+
+#: views/zerodocs.py:48
+msgid "Please check your form input again!"
+msgstr "Bitte überprüfen Sie Ihre Eingaben!"
+
+#. Translators: filename part
+#: views/zerodocs.py:76
+msgid "letter_zeroeurodocs"
+msgstr "brief_nulleuroaerzte"
 
 #~ msgid "Postcode, e.g. 45147"
 #~ msgstr "PLZ, z.B. 45147"
@@ -1192,9 +1461,6 @@ msgstr ""
 #~ "gesucht.\n"
 #~ "              "
 
-#~ msgid "Has your doctor received money from pharma companies?"
-#~ msgstr "Hat Dein Arzt Geld von der Pharmaindustrie erhalten?"
-
 #~ msgid ""
 #~ "Die Informationen auf dieser Seite stammen von den 54 Mitgliedsfirmen der "
 #~ "„Freiwilligen Selbstkontrolle für die Arzneimittelindustrie e.V.“, die "
@@ -1230,9 +1496,6 @@ msgstr ""
 #~ msgstr ""
 #~ "Finde heraus, für welche Medikamente Dein Arzt Geld von der Pharma&shy;"
 #~ "industrie bekommen kann!"
-
-#~ msgid "Drug name"
-#~ msgstr "Medikament"
 
 #~ msgid "Avastin"
 #~ msgstr "Avastin"
