Update translation files

--- a/correctiv_eurosfueraerzte/locale/de/LC_MESSAGES/django.po
+++ b/correctiv_eurosfueraerzte/locale/de/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-05-29 12:13+0200\n"
-"PO-Revision-Date: 2017-05-29 11:09+0100\n"
+"POT-Creation-Date: 2017-05-29 15:20+0200\n"
+"PO-Revision-Date: 2017-05-29 15:24+0100\n"
 "Last-Translator: Stefan Wehrmeyer <stefan.wehrmeyer@okfn.org>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -1289,34 +1289,59 @@ msgstr[1] ""
 #, python-format
 msgid ""
 "\n"
-"          %(name)s has not received fees for observational studies/NIS in "
-"%(year_list)s.\n"
-"        "
+"            Additionally, %(name)s has not received fees for observational "
+"studies/NIS in %(year_list)s.\n"
+"          "
 msgid_plural ""
 "\n"
-"          %(name)s has not received fees for observational studies/NIS in "
-"%(year_list)s.\n"
+"            Additionally, %(name)s has not received fees for observational "
+"studies/NIS in %(year_list)s.\n"
+"          "
+msgstr[0] ""
+"\n"
+"          %(name)s versichert außerdem, im Jahr %(year_list)s kein Honorar "
+"für die Durchführung von Anwendungs&shy;beobachtungen/NIS erhalten zu "
+"haben.\n"
 "        "
+msgstr[1] ""
+"\n"
+"          %(name)s versichert außerdem, in den Jahren %(year_list)s kein "
+"Honorar für die Durchführung von Anwendungs&shy;beobachtungen/NIS erhalten "
+"zu haben.\n"
+"        "
+
+#: templates/correctiv_eurosfueraerzte/zerodocs/detail.html:45
+#, python-format
+msgid ""
+"\n"
+"            %(name)s has not received fees for observational studies/NIS in "
+"%(year_list)s.\n"
+"          "
+msgid_plural ""
+"\n"
+"            %(name)s has not received fees for observational studies/NIS in "
+"%(year_list)s.\n"
+"          "
 msgstr[0] ""
 "\n"
 "          %(name)s versichert, im Jahr %(year_list)s kein Honorar für die "
-"Durchführung von Anwendungsbeobachtungen/NIS erhalten zu haben.\n"
+"Durchführung von Anwendungs&shy;beobachtungen/NIS erhalten zu haben.\n"
 "        "
 msgstr[1] ""
 "\n"
 "          %(name)s versichert, in den Jahren %(year_list)s kein Honorar für "
-"die Durchführung von Anwendungsbeobachtungen/NIS erhalten zu haben.\n"
+"die Durchführung von Anwendungs&shy;beobachtungen/NIS erhalten zu haben.\n"
 "        "
 
-#: templates/correctiv_eurosfueraerzte/zerodocs/detail.html:50
+#: templates/correctiv_eurosfueraerzte/zerodocs/detail.html:58
 msgid "Organisations and doctors at similar address"
 msgstr "Organisationen und Ärzte an ähnlicher Adresse"
 
-#: templates/correctiv_eurosfueraerzte/zerodocs/detail.html:54
+#: templates/correctiv_eurosfueraerzte/zerodocs/detail.html:62
 msgid "Nearby doctors and organisations"
 msgstr "Ärzte und Organisationen in der Nähe"
 
-#: templates/correctiv_eurosfueraerzte/zerodocs/detail.html:60
+#: templates/correctiv_eurosfueraerzte/zerodocs/detail.html:68
 msgid ""
 "\n"
 "    The disclosure according to the transparency code does not apply to "
